--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,9 @@
 $background-image: 'iStock_67834587_MEDIUM.jpg';
+
 $header-height: 100px;
 $nav-bar-width: 400px;
+
+$footer-height: 200px;
 
 @font-face {
     font-family: 'Futura Light';
@@ -69,5 +72,13 @@ body {
 			}
 		}
 	}
+}
+
+#footer {
+	position: absolute;
+	bottom: 0%;
+	height: $footer-height;
+	width: 100%;
+	background-color: white;
 }
 
