--- a/style.css
+++ b/style.css
@@ -1,60 +1,38 @@
-@font-face {
-  font-family: 'Futura Light';
-  src: url("fonts/Futura (Light).ttf"); }
-body {
-  font-family: 'Futura Light';
-  font-weight: 100;
-  margin: 0 0 0 0; }
+/*
+Error: Invalid CSS after "}": expected "}", was ""
+        on line 127 of style.scss
 
-#container {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-size: cover;
-  background-position: center;
-  background-image: url("imgs/iStock_67834587_MEDIUM.jpg"); }
+122: 		}
+123: }
 
-#header {
-  top: 0%;
-  position: absolute;
-  width: 100%;
-  height: 100px; }
-  #header #logo {
-    cursor: pointer;
-    margin-left: 10px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-image: url("imgs/TAG_white_1920x1080.png");
-    float: left;
-    width: 100px;
-    height: 100px; }
-  #header #right-nav-bar {
-    float: right;
-    height: 100px;
-    width: 400px; }
-    #header #right-nav-bar #menu-wrapper {
-      top: 50%;
-      transform: translateY(-50%);
-      -webkit-transform: translateY(-50%);
-      position: relative;
-      top: 50%;
-      height: 33.33333px;
-      width: 100%; }
-      #header #right-nav-bar #menu-wrapper .menu-item {
-        cursor: pointer;
-        display: inline;
-        margin-left: 5px;
-        margin-right: 5px;
-        height: 100%;
-        font-size: 25px;
-        color: white; }
-
-#footer {
-  position: absolute;
-  bottom: 0%;
-  height: 200px;
-  width: 100%;
-  background-color: white; }
-
-/*# sourceMappingURL=style.css.map */
+Backtrace:
+style.scss:127
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1189:in `expected'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1125:in `expected'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1120:in `tok!'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:658:in `block'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:649:in `ruleset'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:675:in `block_child'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:668:in `block_contents'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:125:in `stylesheet'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:41:in `parse'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/engine.rb:406:in `_to_tree'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/engine.rb:381:in `_render_with_sourcemap'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/engine.rb:298:in `render_with_sourcemap'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:331:in `block in watch'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `call'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `on_change'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Invalid CSS after \"}\": expected \"}\", was \"\"\A         on line 127 of style.scss\A \A 122: 		}\A 123: }"; }
