--- a/style.scss
+++ b/style.scss
@@ -1,20 +1,17 @@
 
 //////////////////////////////////////////////////////////////////////
-
 $background-image: 'iStock_67834587_MEDIUM.jpg';
 $header-height: 100px;
 $nav-bar-width: 400px;
 $footer-height: 150px;
 
 //////////////////////////////////////////////////////////////////////
-
 @font-face {
     font-family: 'Futura Light';
     src: url('fonts/Futura (Light).ttf');
 }
 
 //////////////////////////////////////////////////////////////////////
-
 @mixin center {
 	top: 50%;
 	left: 50%;
@@ -34,15 +31,20 @@ $footer-height: 150px;
 	-webkit-transform: translatex(-50%);
 }
 
-//////////////////////////////////////////////////////////////////////
+///Classes to be used with @extend////////////////////////////////////
+.menu-item {
+	cursor: pointer;
+	height: 100%;
+	font-size: 25px;
+	color: white;
+}
 
+//////////////////////////////////////////////////////////////////////
 body {
 	font-family: 'Futura Light';
 	font-weight: 100;
 	margin: 0 0 0 0;
 }
-
-//////////////////////////////////////////////////////////////////////
 
 #container {
 	width: 100%;
@@ -54,7 +56,6 @@ body {
 }
 
 //////////////////////////////////////////////////////////////////////
-
 #header {
 	top: 0%;
 	position: absolute;
@@ -86,20 +87,16 @@ body {
 			width: 100%;
 
 			.menu-item {
-				cursor: pointer;
+				@extend .menu-item;
 				display: inline;
 				margin-left: 5px;
 				margin-right: 5px;
-				height: 100%;
-				font-size: 25px;
-				color: white;
 			}
 		}
 	}
 }
 
 //////////////////////////////////////////////////////////////////////
-
 #footer {
 	position: absolute;
 	bottom: 0%;
@@ -111,15 +108,24 @@ body {
 		position: absolute;
 		height: 100%;
 		width: 50%;
-		background-color: red;
 
 			#menu-wrapper {
 			@include center-vertically;
 			position: relative;
-			top: 50%;
-			height: $header-height / 3;
+			height: $header-height / 1.3;
 			width: 100%;
+			background-color: white;
+
+			.menu-item {
+				margin-left: 5%;
+				margin-right: 5%;
+				@extend .menu-item;
+				width: 10%;
+				background-color: red;
+				float: left;
+			}
 		}
+	}
 }
 
 
