--- a/style.scss
+++ b/style.scss
@@ -3,7 +3,7 @@
 $background-image: 'iStock_67834587_MEDIUM.jpg';
 $header-height: 100px;
 $nav-bar-width: 400px;
-$footer-height: 150px;
+$footer-height: 210px;
 
 //////////////////////////////////////////////////////////////////////
 @font-face {
@@ -41,7 +41,6 @@ $footer-height: 150px;
 
 //////////////////////////////////////////////////////////////////////
 body {
-	font-family: 'Futura Light';
 	font-weight: 100;
 	margin: 0 0 0 0;
 }
@@ -53,10 +52,20 @@ body {
 	background-size: cover;
 	background-position: center;
 	background-image: url('imgs/' + $background-image);
+
+	#background-overlay {
+		height: 100%;
+		width: 100%;
+		position: absolute;
+		background: radial-gradient(white, black, black);
+		opacity: 0.4;
+	}
 }
+
 
 //////////////////////////////////////////////////////////////////////
 #header {
+	font-family: 'Futura Light';
 	top: 0%;
 	position: absolute;
 	width: 100%;
@@ -107,22 +116,57 @@ body {
 		@include center-horizontally;
 		position: absolute;
 		height: 100%;
-		width: 50%;
+		width: 720px;
 
 			#menu-wrapper {
 			@include center-vertically;
 			position: relative;
-			height: $header-height / 1.3;
+			height: 72px;
 			width: 100%;
-			background-color: white;
+
+			#blue {
+				color: #1DAFEB;
+				border-color: #1DAFEB;
+			}
+
+			#pink {
+				color: #E9168C;
+				border-color: #E9168C;
+			}
+
+			#yellow {
+				color: #FEF035;
+				border-color: #FEF035;
+			}
+
+			#black {
+				color: black;
+				border-color: black;
+			}
 
 			.menu-item {
+				font-family: 'Futura';
+				@extend .menu-item;
+				-webkit-box-sizing: border-box; 
+				-moz-box-sizing: border-box;    
+				box-sizing: border-box;
 				margin-left: 5%;
 				margin-right: 5%;
-				@extend .menu-item;
 				width: 10%;
-				background-color: red;
+				border-radius: 50%;
+				border: 7px solid white;
 				float: left;
+
+				.bottom-nav-titles {
+					font-family: 'Futura';
+					top: 70px;
+					@include center-horizontally;
+					position: relative;
+					display: inline-block;
+					// display: inline-block;
+					font-size: 20px;
+					text-align: center;
+				}
 			}
 		}
 	}
