--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ body {
         border: 7px solid white;
         float: left; }
         #footer #bottom-nav-bar #menu-wrapper .menu-item .bottom-nav-titles {
+          white-space: nowrap;
           font-family: 'Futura';
           top: 70px;
           left: 50%;
@@ -108,7 +109,7 @@ body {
           -webkit-transform: translatex(-50%);
           position: relative;
           display: inline-block;
-          font-size: 20px;
+          font-size: 17px;
           text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
