--- a/style.scss
+++ b/style.scss
@@ -58,7 +58,7 @@ body {
 		width: 100%;
 		position: absolute;
 		background: radial-gradient(white, black, black);
-		opacity: 0.4;
+		opacity: 0.6;
 	}
 }
 
@@ -149,7 +149,12 @@ body {
 				border-color: black;
 			}
 
+			.menu-item:hover {
+				box-shadow: inset 0px 0px 20px 30px;
+			}
+
 			.menu-item {
+				transition-duration: 2s;
 				font-family: 'Futura';
 				@extend .menu-item;
 				-webkit-box-sizing: border-box; 
