--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     height: 100%;
     width: 100%;
     position: absolute;
-    background: radial-gradient(white, black, black);
+    background: radial-gradient(black, black, white);
     opacity: 0.6; }
 
 #header {
@@ -59,7 +59,8 @@ body {
         margin-left: 5px;
         margin-right: 5px; }
       #header #right-nav-bar #menu-wrapper .menu-item:hover {
-        color: black; }
+        text-shadow: 0px 3px 5px black;
+        color: #F0DE0F; }
 
 #footer {
   position: absolute;
@@ -87,13 +88,14 @@ body {
         color: #E9168C;
         border-color: #E9168C; }
       #footer #bottom-nav-bar #menu-wrapper #yellow {
-        color: #FEF035;
-        border-color: #FEF035; }
+        color: #F0DE0F;
+        border-color: #F0DE0F; }
       #footer #bottom-nav-bar #menu-wrapper #black {
         color: black;
         border-color: black; }
       #footer #bottom-nav-bar #menu-wrapper .menu-item:hover {
-        box-shadow: inset 0px 0px 20px 30px; }
+        box-shadow: inset 0px 0px 20px 30px, 0px 3px 5px black;
+        text-shadow: 0px 3px 5px black; }
       #footer #bottom-nav-bar #menu-wrapper .menu-item {
         transition-duration: 1s;
         font-family: 'Futura';
