--- a/style.scss
+++ b/style.scss
@@ -57,7 +57,7 @@ body {
 		height: 100%;
 		width: 100%;
 		position: absolute;
-		background: radial-gradient(white, black, black);
+		background: radial-gradient(black, black, white);
 		opacity: 0.6;
 	}
 }
@@ -104,7 +104,8 @@ body {
 			}
 
 			.menu-item:hover {
-				color: black;
+				text-shadow: 0px 3px 5px black;
+				color: #F0DE0F;
 			}
 		}
 	}
@@ -140,8 +141,8 @@ body {
 			}
 
 			#yellow {
-				color: #FEF035;
-				border-color: #FEF035;
+				color: #F0DE0F;
+				border-color: #F0DE0F;
 			}
 
 			#black {
@@ -150,8 +151,11 @@ body {
 			}
 
 			.menu-item:hover {
-				box-shadow: inset 0px 0px 20px 30px;
+				box-shadow: inset 0px 0px 20px 30px, 0px 3px 5px black;
+				text-shadow: 0px 3px 5px black;
 			}
+
+
 
 			.menu-item {
 				transition-duration: 1s;
