--- a/style.css
+++ b/style.css
@@ -1,37 +1,55 @@
 @font-face {
   font-family: 'Futura Light';
   src: url("fonts/Futura (Light).ttf"); }
-.menu-item, #header #right-nav-bar #menu-wrapper .menu-item, #footer #bottom-nav-bar #menu-wrapper .menu-item {
+.menu-item, #header #right-nav-bar #menu-wrapper .menu-item, #header #right-nav-bar #menu-wrapper .menu-item-dark, #footer #bottom-nav-bar #menu-wrapper .menu-item {
   cursor: pointer;
   height: 100%;
   font-size: 25px;
   color: white; }
 
+.four-grid {
+  height: 100%;
+  width: 25%;
+  color: red;
+  float: left; }
+
 body {
   font-weight: 100;
   margin: 0 0 0 0; }
 
-#container {
+.container, #index-container, #work-container {
   width: 100%;
   height: 100%;
   position: absolute;
   background-size: cover;
-  background-position: center;
-  background-image: url("imgs/iStock_67834587_MEDIUM.jpg"); }
-  #container #background-overlay {
+  background-position: center; }
+  .container #background-overlay, #index-container #background-overlay, #work-container #background-overlay {
     height: 100%;
     width: 100%;
     position: absolute;
     background: radial-gradient(black, black, white);
     opacity: 0.6; }
 
+#index-container {
+  background-image: url("imgs/iStock_67834587_MEDIUM.jpg"); }
+
+#work-container {
+  background: white; }
+
+.content {
+  padding-top: 100px;
+  padding-bottom: 210px;
+  position: fixed;
+  width: 100%;
+  height: 100%; }
+
 #header {
   font-family: 'Futura Light';
   top: 0%;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100px; }
-  #header #logo {
+  #header .logo, #header .logo-dark {
     cursor: pointer;
     margin-left: 10px;
     background-position: center;
@@ -41,6 +59,8 @@ body {
     float: left;
     width: 100px;
     height: 100px; }
+  #header .logo-dark {
+    background-image: url("imgs/TAG_logo_tag_black_blacktag.png"); }
   #header #right-nav-bar {
     float: right;
     height: 100px;
@@ -53,17 +73,23 @@ body {
       top: 50%;
       height: 33.33333px;
       width: 100%; }
-      #header #right-nav-bar #menu-wrapper .menu-item {
+      #header #right-nav-bar #menu-wrapper .menu-item, #header #right-nav-bar #menu-wrapper .menu-item-dark {
+        color: white;
         transition-duration: 1s;
         display: inline;
         margin-left: 5px;
         margin-right: 5px; }
-      #header #right-nav-bar #menu-wrapper .menu-item:hover {
+      #header #right-nav-bar #menu-wrapper .menu-item-dark {
+        color: black; }
+      #header #right-nav-bar #menu-wrapper .menu-item:hover, #header #right-nav-bar #menu-wrapper .menu-item-dark:hover {
+        text-shadow: 0px 3px 5px black;
+        color: #F0DE0F; }
+      #header #right-nav-bar #menu-wrapper .menu-item-dark:hover {
         text-shadow: 0px 3px 5px black;
         color: #F0DE0F; }
 
 #footer {
-  position: absolute;
+  position: fixed;
   bottom: 0%;
   height: 210px;
   width: 100%; }
@@ -93,10 +119,10 @@ body {
       #footer #bottom-nav-bar #menu-wrapper #black {
         color: black;
         border-color: black; }
-      #footer #bottom-nav-bar #menu-wrapper .menu-item:hover {
+      #footer #bottom-nav-bar #header #right-nav-bar #menu-wrapper .menu-item-dark:hover, #header #right-nav-bar #footer #bottom-nav-bar #menu-wrapper .menu-item-dark:hover, #footer #bottom-nav-bar #menu-wrapper .menu-item:hover {
         box-shadow: inset 0px 0px 20px 30px, 0px 3px 5px black;
         text-shadow: 0px 3px 5px black; }
-      #footer #bottom-nav-bar #menu-wrapper .menu-item {
+      #footer #bottom-nav-bar #header #right-nav-bar #menu-wrapper .menu-item-dark, #header #right-nav-bar #footer #bottom-nav-bar #menu-wrapper .menu-item-dark, #footer #bottom-nav-bar #menu-wrapper .menu-item {
         transition-duration: 1s;
         font-family: 'Futura';
         -webkit-box-sizing: border-box;
@@ -108,7 +134,7 @@ body {
         border-radius: 50%;
         border: 7px solid white;
         float: left; }
-        #footer #bottom-nav-bar #menu-wrapper .menu-item .bottom-nav-titles {
+        #footer #bottom-nav-bar #header #right-nav-bar #menu-wrapper .menu-item-dark .bottom-nav-titles, #header #right-nav-bar #footer #bottom-nav-bar #menu-wrapper .menu-item-dark .bottom-nav-titles, #footer #bottom-nav-bar #menu-wrapper .menu-item .bottom-nav-titles {
           white-space: nowrap;
           font-family: 'Futura';
           top: 70px;
