--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 #work-container {
   background: white; }
 
-.content {
+.content, #work-content {
   padding-top: 100px;
   padding-bottom: 210px;
   position: fixed;
@@ -89,6 +89,24 @@ body {
       #header #right-nav-bar #menu-wrapper .menu-item-dark:hover {
         text-shadow: 0px 3px 5px black;
         color: #F0DE0F; }
+
+#work-content #left-text-container {
+  float: left;
+  width: 40%;
+  height: 100%; }
+  #work-content #left-text-container #left-text-wrapper {
+    height: 100%;
+    padding-left: 30%;
+    padding-right: 10%;
+    padding-top: 100px; }
+#work-content #right-media-container {
+  float: left;
+  width: 60%;
+  height: 100%; }
+  #work-content #right-media-container #right-media-wrapper {
+    height: 100%;
+    padding-right: 30%;
+    padding-top: 100px; }
 
 #footer #bottom-nav-bar {
   left: 50%;
