--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ body {
   padding-top: 100px;
   padding-bottom: 210px;
   position: fixed;
-  width: 100%;
-  height: 100%; }
+  width: 1920px;
+  height: 1080px; }
 
 #footer {
   z-index: 1;
@@ -105,6 +105,7 @@ body {
   width: 60%;
   height: 100%; }
   #work-content #right-media-container #right-media-wrapper {
+    box-sizing: border-box;
     height: 100%;
     padding-right: 30%;
     padding-top: 100px; }
@@ -112,7 +113,25 @@ body {
       float: left;
       height: 45%;
       width: 30%;
-      margin: 0 2.5% 0 0; }
+      margin: 0 2.5% 2.5% 0;
+      background-color: #3A3A3C; }
+      #work-content #right-media-container #right-media-wrapper .video-media-wrapper .video-media-bottom {
+        height: 25%;
+        top: 75%;
+        position: relative;
+        width: 100%;
+        background-color: #58585A; }
+        #work-content #right-media-container #right-media-wrapper .video-media-wrapper .video-media-bottom .video-media-bottom-color-bars {
+          position: relative;
+          height: 11%;
+          top: 90%;
+          width: 50%;
+          float: left;
+          background-color: #1DAFEB; }
+        #work-content #right-media-container #right-media-wrapper .video-media-wrapper .video-media-bottom .video-media-bottom-color-bars:nth-child(even) {
+          background-color: #F0DE0F; }
+        #work-content #right-media-container #right-media-wrapper .video-media-wrapper .video-media-bottom .video-media-bottom-color-bars.pink {
+          background-color: #E9168C; }
 
 #footer #bottom-nav-bar {
   left: 50%;
