--- a/style.css
+++ b/style.css
@@ -112,8 +112,8 @@ body {
     #work-content #right-media-container #right-media-wrapper .video-media-wrapper {
       float: left;
       height: 45%;
-      width: 30%;
-      margin: 0 2.5% 2.5% 0;
+      width: 32%;
+      margin: 0 10px 10px 0;
       background-color: #3A3A3C; }
       #work-content #right-media-container #right-media-wrapper .video-media-wrapper .video-media-bottom {
         height: 25%;
@@ -132,6 +132,28 @@ body {
           background-color: #F0DE0F; }
         #work-content #right-media-container #right-media-wrapper .video-media-wrapper .video-media-bottom .video-media-bottom-color-bars.pink {
           background-color: #E9168C; }
+    #work-content #right-media-container #right-media-wrapper #video-media-nav {
+      margin: 0 10px 0 0;
+      position: relative;
+      float: right;
+      bottom: 0%;
+      width: 110px;
+      height: 50px; }
+      #work-content #right-media-container #right-media-wrapper #video-media-nav .arrow:nth-child(2) {
+        margin-left: 10px; }
+      #work-content #right-media-container #right-media-wrapper #video-media-nav .arrow {
+        font-family: 'Futura Light';
+        font-size: 35px;
+        opacity: 0.7;
+        line-height: 50px;
+        text-align: center;
+        color: #58585A;
+        box-sizing: border-box;
+        border-radius: 50%;
+        border: 2px solid #58585A;
+        float: left;
+        width: 50px;
+        height: 100%; }
 
 #footer #bottom-nav-bar {
   left: 50%;
