--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   padding-bottom: 210px;
   position: fixed;
   width: 1920px;
-  height: 1080px; }
+  height: 100%; }
 
 #footer {
   z-index: 1;
@@ -96,6 +96,7 @@ body {
   width: 40%;
   height: 100%; }
   #work-content #left-text-container #left-text-wrapper {
+    box-sizing: border-box;
     height: 100%;
     padding-left: 30%;
     padding-right: 10%;
@@ -107,12 +108,11 @@ body {
   #work-content #right-media-container #right-media-wrapper {
     box-sizing: border-box;
     height: 100%;
-    padding-right: 30%;
-    padding-top: 100px; }
+    width: 660px; }
     #work-content #right-media-container #right-media-wrapper .video-media-wrapper {
       float: left;
       height: 45%;
-      width: 32%;
+      width: 210px;
       margin: 0 10px 10px 0;
       background-color: #3A3A3C; }
       #work-content #right-media-container #right-media-wrapper .video-media-wrapper .video-media-bottom {
@@ -139,9 +139,14 @@ body {
       bottom: 0%;
       width: 110px;
       height: 50px; }
+      #work-content #right-media-container #right-media-wrapper #video-media-nav .arrow:hover {
+        color: #F0DE0F; }
       #work-content #right-media-container #right-media-wrapper #video-media-nav .arrow:nth-child(2) {
         margin-left: 10px; }
       #work-content #right-media-container #right-media-wrapper #video-media-nav .arrow {
+        display: block;
+        cursor: pointer;
+        transition-duration: 1s;
         font-family: 'Futura Light';
         font-size: 35px;
         opacity: 0.7;
@@ -205,7 +210,7 @@ body {
         font-size: 17px;
         text-align: center; }
     #footer #bottom-nav-bar #header #right-nav-bar #menu-wrapper .menu-item-dark:hover, #header #right-nav-bar #footer #bottom-nav-bar #menu-wrapper .menu-item-dark:hover, #footer #bottom-nav-bar #menu-wrapper .menu-item:hover {
-      box-shadow: 0px 3px 5px black;
-      text-shadow: 0px 3px 5px black; }
+      text-shadow: 0px 3px 5px black;
+      box-shadow: -3px 3px 5px black; }
 
 /*# sourceMappingURL=style.css.map */
