--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,12 @@ $yellow: #F0DE0F;
 	left: 50%;
 	transform: translatex(-50%);
 	-webkit-transform: translatex(-50%); }
+@mixin hover-text-shadow {
+	text-shadow: 0px 3px 5px black;
+}
+@mixin hover-box-shadow {
+	box-shadow: -3px 3px 5px black;
+}
 ///Classes to be used with @extend////////////////////////////////////
 .menu-item {
 	cursor: pointer;
@@ -58,7 +64,7 @@ body {
 	padding-bottom: $footer-height;
 	position: fixed;
 	width: 1920px;
-	height: 1080px; }
+	height: 100%}
 #footer {
 	z-index: 1;
 	position: fixed;
@@ -107,20 +113,24 @@ body {
 				@extend .menu-item;
 				color: black; }
 			.menu-item:hover {
-				text-shadow: 0px 3px 5px black;
+				@include hover-text-shadow;
 				color: $yellow; }
 			.menu-item-dark:hover {
-				text-shadow: 0px 3px 5px black;
+				@include hover-text-shadow;
 				color: $yellow; } } } }
 //////////////////////////////////////////////////////////////////////
 
 #work-content {
+	$right-media-wrapper-width: 660px;
+	$video-wrapper-spacing: 10px;
+	$video-wrapper-width: ($right-media-wrapper-width - ($video-wrapper-spacing * 3)) / 3;
 	@extend .content;
 	#left-text-container { 
 		float: left;
 		width: 40%;
 		height: 100%;
 		#left-text-wrapper {
+			box-sizing: border-box;
 			height: 100%;
 			padding-left: 30%;
 			padding-right: 10%;
@@ -132,13 +142,14 @@ body {
 		#right-media-wrapper {
 			box-sizing: border-box;
 			height: 100%;
-			padding-right: 30%;
-			padding-top: 100px; 
+			width: $right-media-wrapper-width;
+			// padding-right: 40%;
+			// padding-top: 100px; 
 			.video-media-wrapper {
 				float: left;
 				height: 45%;
-				width: 32%;
-				margin: 0 10px 10px 0;
+				width: $video-wrapper-width;
+				margin: 0 $video-wrapper-spacing $video-wrapper-spacing 0;
 				background-color: #3A3A3C;
 				.video-media-bottom {
 					height: 25%; 
@@ -164,9 +175,14 @@ body {
 					bottom: 0%;
 					width: 110px;
 					height: 50px;
+					.arrow:hover {
+						color: $yellow }
 					.arrow:nth-child(2) {
 						margin-left: 10px; }
 					.arrow {
+						display: block;
+						cursor: pointer;
+						transition-duration: 1s;
 						font-family: 'Futura Light';
 						font-size: 35px;
 						opacity: 0.7;
@@ -227,9 +243,8 @@ body {
 						font-size: 17px;
 						text-align: center; } } 	
 				.menu-item:hover {
-					// box-shadow: inset 0px 0px 20px 30px, 0px 3px 5px black;
-					box-shadow: 0px 3px 5px black;
-					text-shadow: 0px 3px 5px black; } } } }
+					@include hover-text-shadow;
+					@include hover-box-shadow; } } } }
 
 
 
