--- a/style.css
+++ b/style.css
@@ -11,36 +11,36 @@ body {
   font-weight: 100;
   margin: 0 0 0 0; }
 
-#container {
+
+.container, #index-container, #work-container, #production-container, #vr-container {
   width: 100%;
   height: 100%;
   position: absolute;
   background-size: cover;
   background-position: center; }
-  #background-overlay {
+  .container #background-overlay, #index-container #background-overlay, #work-container #background-overlay,  #production-container #background-overlay, #vr-container #background-overlay {
     height: 100%;
     width: 100%;
-    position: absolute; }
-    .home-page #background-overlay {
-      background: radial-gradient(white, black, black);
-      opacity: 0.4; }
-    .production-page #background-overlay {
-      background-color: #00AEEF;
-      opacity: 0.4;
-    }
+    position: absolute;
+  }
+  .container #background-overlay, #index-container #background-overlay, #work-container #background-overlay {
+    background: radial-gradient(black, black, white);
+    opacity: 0.6;
+  }
+  #production-container #background-overlay {
+    /*background-color: #00AEEF;*/
+  }
+
+#index-container {
+  background-image: url("imgs/iStock_67834587_MEDIUM.jpg"); }
+
+#production-container {
+  background-image: url("imgs/iStock_79251697_XXLARGE.jpg"); }
+
+#vr-container {
+  background-image: url("imgs/iStock_93639499_MEDIUM.jpg"); }
 
 
-.home-page {
-  background-image: url("imgs/iStock_67834587_MEDIUM.jpg");
-}
-
-.production-page {
-  background-image: url("imgs/iStock_79251697_XXLARGE.jpg");
-}
-
-.vr-page {
-  background-image: url("imgs/iStock_93639499_MEDIUM.jpg");
-}
 
 #header {
   font-family: 'Futura Light';
@@ -76,8 +76,8 @@ body {
         margin-left: 5px;
         margin-right: 5px; }
       #header #right-nav-bar #menu-wrapper .menu-item:hover {
-        color: black; }
-
+        text-shadow: 0px 3px 5px black;
+        color: #F0DE0F; }
 
 #footer {
   position: absolute;
@@ -105,15 +105,16 @@ body {
         color: #E9168C;
         border-color: #E9168C; }
       #footer #bottom-nav-bar #menu-wrapper #yellow {
-        color: #FEF035;
-        border-color: #FEF035; }
+        color: #F0DE0F;
+        border-color: #F0DE0F; }
       #footer #bottom-nav-bar #menu-wrapper #black {
         color: black;
         border-color: black; }
       #footer #bottom-nav-bar #menu-wrapper .menu-item:hover {
-        box-shadow: inset 0px 0px 20px 30px; }
+        box-shadow: inset 0px 0px 20px 30px, 0px 3px 5px black;
+        text-shadow: 0px 3px 5px black; }
       #footer #bottom-nav-bar #menu-wrapper .menu-item {
-        transition-duration: 2s;
+        transition-duration: 1s;
         font-family: 'Futura';
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
@@ -138,21 +139,17 @@ body {
 
 /*# sourceMappingURL=style.css.map */
 
-
 #footer-production {
   position: absolute;
-  bottom: 0%;
   height: 210px;
   width: 100%; }
   #footer-production #bottom-nav-bar {
-    left: 50%;
     transform: translatex(-50%);
     -webkit-transform: translatex(-50%);
     position: absolute;
     height: 100%;
     width: 720px; }
     #footer-production #bottom-nav-bar #menu-wrapper {
-      top: 50%;
       transform: translateY(-50%);
       -webkit-transform: translateY(-50%);
       position: relative;
@@ -170,12 +167,11 @@ body {
         width: 10%;
         border-radius: 50%;
         border: 4px solid white;
-        float: left; }
+        /*float: left; */
+      }
         #footer-production #bottom-nav-bar #menu-wrapper .menu-item .bottom-nav-titles {
           white-space: nowrap;
           font-family: 'Futura';
-          top: 70px;
-          left: 50%;
           transform: translatex(-50%);
           -webkit-transform: translatex(-50%);
           position: relative;
@@ -183,10 +179,16 @@ body {
           font-size: 12px;
           text-align: center; }
 
-
-
 #vr-text-column {
   width: 330px;
   margin: 175px 0 0 200px;
   color: #FFF;
 }
+
+#content {
+  width: 330px;
+  display: block;
+  clear: both;
+}
+
+
