--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 @font-face {
   font-family: 'Futura Light';
   src: url("fonts/Futura (Light).ttf"); }
-.menu-item, #header #right-nav-bar #menu-wrapper .menu-item, #header #right-nav-bar #menu-wrapper .menu-item-dark, #footer #bottom-nav-bar #menu-wrapper .menu-item {
+@font-face {
+  font-family: 'Harriet Regular';
+  src: url("fonts/Harriet Display Regular.otf"); }
+@font-face {
+  font-family: 'Harriet Bold';
+  src: url("fonts/Harriet Display Bold.otf"); }
+.menu-item, #header #right-nav-bar #menu-wrapper .menu-item, #header #right-nav-bar #menu-wrapper .menu-item-dark, #footer #bottom-nav-bar #menu-wrapper .menu-item, #homepage-footer #bottom-nav-bar #menu-wrapper .menu-item {
   cursor: pointer;
   height: 100%;
   font-size: 25px;
@@ -33,16 +39,16 @@ body {
 .content, #work-content {
   box-sizing: border-box;
   padding-top: 100px;
-  padding-bottom: 210px;
+  padding-bottom: 175px;
   position: fixed;
   width: 1920px;
-  height: 100%; }
+  height: 960px; }
 
-#footer {
+#footer, #homepage-footer {
   z-index: 1;
   position: fixed;
   bottom: 0%;
-  height: 210px;
+  height: 175px;
   width: 100%; }
 
 #header {
@@ -93,26 +99,38 @@ body {
 
 #work-content #left-text-container {
   float: left;
-  width: 40%;
+  width: 45%;
   height: 100%; }
   #work-content #left-text-container #left-text-wrapper {
     box-sizing: border-box;
     height: 100%;
     padding-left: 30%;
     padding-right: 10%;
-    padding-top: 100px; }
+    padding-top: 50px; }
+    #work-content #left-text-container #left-text-wrapper h1 {
+      margin: 0 0 10px 0;
+      font-family: 'Harriet Bold';
+      font-size: 60px; }
+    #work-content #left-text-container #left-text-wrapper p {
+      margin: 0 0 40px 0;
+      font-size: 22px;
+      font-family: 'Futura Light'; }
+    #work-content #left-text-container #left-text-wrapper h2 {
+      margin: 70px 0 0 0;
+      font-size: 45px; }
 #work-content #right-media-container {
   float: left;
-  width: 60%;
+  width: 55%;
   height: 100%; }
   #work-content #right-media-container #right-media-wrapper {
     box-sizing: border-box;
     height: 100%;
-    width: 660px; }
+    width: 600px;
+    padding-top: 100px; }
     #work-content #right-media-container #right-media-wrapper .video-media-wrapper {
       float: left;
       height: 45%;
-      width: 210px;
+      width: 190px;
       margin: 0 10px 10px 0;
       background-color: #3A3A3C; }
       #work-content #right-media-container #right-media-wrapper .video-media-wrapper .video-media-bottom {
@@ -140,7 +158,8 @@ body {
       width: 110px;
       height: 50px; }
       #work-content #right-media-container #right-media-wrapper #video-media-nav .arrow:hover {
-        color: #F0DE0F; }
+        color: #F0DE0F;
+        border-color: #F0DE0F; }
       #work-content #right-media-container #right-media-wrapper #video-media-nav .arrow:nth-child(2) {
         margin-left: 10px; }
       #work-content #right-media-container #right-media-wrapper #video-media-nav .arrow {
@@ -160,33 +179,36 @@ body {
         width: 50px;
         height: 100%; }
 
-#footer #bottom-nav-bar {
+#homepage-footer {
+  height: 210px; }
+
+#footer #bottom-nav-bar, #homepage-footer #bottom-nav-bar {
   left: 50%;
   transform: translatex(-50%);
   -webkit-transform: translatex(-50%);
   position: absolute;
   height: inherit;
   width: 720px; }
-  #footer #bottom-nav-bar #menu-wrapper {
+  #footer #bottom-nav-bar #menu-wrapper, #homepage-footer #bottom-nav-bar #menu-wrapper {
     top: 50%;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
     position: relative;
     height: 72px;
     width: 100%; }
-    #footer #bottom-nav-bar #menu-wrapper #blue {
+    #footer #bottom-nav-bar #menu-wrapper #blue, #homepage-footer #bottom-nav-bar #menu-wrapper #blue {
       color: #1DAFEB;
       border-color: #1DAFEB; }
-    #footer #bottom-nav-bar #menu-wrapper #pink {
+    #footer #bottom-nav-bar #menu-wrapper #pink, #homepage-footer #bottom-nav-bar #menu-wrapper #pink {
       color: #E9168C;
       border-color: #E9168C; }
-    #footer #bottom-nav-bar #menu-wrapper #yellow {
+    #footer #bottom-nav-bar #menu-wrapper #yellow, #homepage-footer #bottom-nav-bar #menu-wrapper #yellow {
       color: #F0DE0F;
       border-color: #F0DE0F; }
-    #footer #bottom-nav-bar #menu-wrapper #black {
+    #footer #bottom-nav-bar #menu-wrapper #black, #homepage-footer #bottom-nav-bar #menu-wrapper #black {
       color: black;
       border-color: black; }
-    #footer #bottom-nav-bar #header #right-nav-bar #menu-wrapper .menu-item-dark, #header #right-nav-bar #footer #bottom-nav-bar #menu-wrapper .menu-item-dark, #footer #bottom-nav-bar #menu-wrapper .menu-item {
+    #footer #bottom-nav-bar #header #right-nav-bar #menu-wrapper .menu-item-dark, #header #right-nav-bar #footer #bottom-nav-bar #menu-wrapper .menu-item-dark, #homepage-footer #bottom-nav-bar #header #right-nav-bar #menu-wrapper .menu-item-dark, #header #right-nav-bar #homepage-footer #bottom-nav-bar #menu-wrapper .menu-item-dark, #footer #bottom-nav-bar #menu-wrapper .menu-item, #homepage-footer #bottom-nav-bar #menu-wrapper .menu-item {
       transition-duration: 1s;
       font-family: 'Futura';
       -webkit-box-sizing: border-box;
@@ -198,7 +220,7 @@ body {
       border-radius: 50%;
       border: 7px solid white;
       float: left; }
-      #footer #bottom-nav-bar #header #right-nav-bar #menu-wrapper .menu-item-dark .bottom-nav-titles, #header #right-nav-bar #footer #bottom-nav-bar #menu-wrapper .menu-item-dark .bottom-nav-titles, #footer #bottom-nav-bar #menu-wrapper .menu-item .bottom-nav-titles {
+      #footer #bottom-nav-bar #header #right-nav-bar #menu-wrapper .menu-item-dark .bottom-nav-titles, #header #right-nav-bar #footer #bottom-nav-bar #menu-wrapper .menu-item-dark .bottom-nav-titles, #homepage-footer #bottom-nav-bar #header #right-nav-bar #menu-wrapper .menu-item-dark .bottom-nav-titles, #header #right-nav-bar #homepage-footer #bottom-nav-bar #menu-wrapper .menu-item-dark .bottom-nav-titles, #footer #bottom-nav-bar #menu-wrapper .menu-item .bottom-nav-titles, #homepage-footer #bottom-nav-bar #menu-wrapper .menu-item .bottom-nav-titles {
         white-space: nowrap;
         font-family: 'Futura';
         top: 70px;
@@ -209,7 +231,7 @@ body {
         display: inline-block;
         font-size: 17px;
         text-align: center; }
-    #footer #bottom-nav-bar #header #right-nav-bar #menu-wrapper .menu-item-dark:hover, #header #right-nav-bar #footer #bottom-nav-bar #menu-wrapper .menu-item-dark:hover, #footer #bottom-nav-bar #menu-wrapper .menu-item:hover {
+    #footer #bottom-nav-bar #header #right-nav-bar #menu-wrapper .menu-item-dark:hover, #header #right-nav-bar #footer #bottom-nav-bar #menu-wrapper .menu-item-dark:hover, #homepage-footer #bottom-nav-bar #header #right-nav-bar #menu-wrapper .menu-item-dark:hover, #header #right-nav-bar #homepage-footer #bottom-nav-bar #menu-wrapper .menu-item-dark:hover, #footer #bottom-nav-bar #menu-wrapper .menu-item:hover, #homepage-footer #bottom-nav-bar #menu-wrapper .menu-item:hover {
       text-shadow: 0px 3px 5px black;
       box-shadow: -3px 3px 5px black; }
 
