--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,52 @@
-
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    .content {
+		width: 1200px !important;
+		height: 700px !important;
+	} 
+  	#left-text-wrapper > h2 {
+		margin: 0 0 10px 0 !important;
+  		font-size: 30px !important;
+	} 
+  	#left-text-wrapper > p {
+  		margin: 0 0 15px 0 !important;
+  		font-size: 16px !important; 
+  	}
+  	#left-text-wrapper > h1 {
+  		font-size: 40px !important; 
+  	} 
+}
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) {
+    .content {
+		width: 1200px !important;
+		height: 700px !important;
+	} 
+  	#left-text-wrapper > h2 {
+		margin: 0 0 10px 0 !important;
+  		font-size: 30px !important;
+	} 
+  	#left-text-wrapper > p {
+  		margin: 0 0 15px 0 !important;
+  		font-size: 16px !important; 
+  	}
+  	#left-text-wrapper > h1 {
+  		font-size: 40px !important; 
+  	}
+  	#right-media-wrapper {
+  		padding-top: 20px !important;
+  	}
+}
 //////////////////////////////////////////////////////////////////////
-$content-height: 960px;
+$footer-height: 120px;
 $header-height: 100px;
+// $content-height: 960px;
 $nav-bar-width: 400px;
-$footer-height: 175px;
 $body-font-size: 22px;
 $header-font-size: 60px;
 $blue: #1DAFEB;
@@ -73,7 +116,7 @@ body {
 	padding-bottom: $footer-height;
 	position: fixed;
 	width: 1920px;
-	height: $content-height;}
+	height: 960px;}
 #footer {
 	z-index: 1;
 	position: fixed;
