--- a/style.css
+++ b/style.css
@@ -50,6 +50,14 @@ body {
   z-index: -10;
   background-image: url("imgs/iStock_93639499_MEDIUM.jpg"); }
 
+#strategy-container {
+  z-index: -10;
+  background-image: url("imgs/thinking-bg.png"); }
+}
+
+#thinking-content {
+  background-color: #FFF200;
+}
 
 
 #header {
