--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -20,6 +20,7 @@ $header-font: 'Harriet Bold';
 $img-path: '../imgs/';
 $logo-dark: 'TAG_logo_tag_black_blacktag.png';
 $logo-light: 'TAG_white_1920x1080.png';
+$homepage-bg: 'TAG-The-Agency-website-homepage-bg.png';
 
 $small-breakpoint: em(1024) !default;
 $medium-breakpoint:  em(1264) !default;
@@ -47,8 +48,12 @@ $xlarge-breakpoint: em(1920) !default;
 // @include respond-to(wide-screens) {
 // }
 
-body {
+.body {
 	box-sizing: border-box;
+	background-size: cover;
+	&--homepage {
+		background-image: url($img-path + $homepage-bg);
+	}
 }
 
 header {
@@ -57,6 +62,7 @@ header {
 }
 
 .nav-top {
+	color: white;	
 	height: 100%;
 	font-family: $body-font;
 	font-size: 1.4em;
@@ -87,6 +93,7 @@ header {
 
 	&__logo {
 		float: left;
+		margin: 0 0 0 20px;
 		width: 100px;
 		height: 100%;
 		background-size: contain;
@@ -98,6 +105,10 @@ header {
 		&--light {
 			background-image: url($img-path + $logo-light);
 		}
+	}
+
+	&--dark {
+		color: black;
 	}
 }
 
