--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -67,3 +67,52 @@ header {
     color: black; }
 
 /*# sourceMappingURL=style.css.map */
+
+
+#icon-bar {
+  position: absolute;
+  bottom: 0%;
+  height: 210px;
+  width: 100%; }
+  #icon-bar #icon-bar_borders {
+    left: 50%;
+    transform: translatex(-50%);
+    -webkit-transform: translatex(-50%);
+    position: absolute;
+    height: 100%;
+    width: 720px; }
+    #icon-bar #icon-bar_borders #icon-bar_title-wrapper {
+      top: 50%;
+      transform: translateY(-50%);
+      -webkit-transform: translateY(-50%);
+      position: relative;
+      height: 54px;
+      width: 75%; }
+      #icon-bar #icon-bar_borders #icon-bar_title-wrapper .icon-bar_title-item:hover {
+        box-shadow: inset 0px 0px 20px 30px, 0px 3px 5px black;
+        text-shadow: 0px 3px 5px black; }
+      #icon-bar #icon-bar_borders #icon-bar_title-wrapper .icon-bar_title-item {
+        transition-duration: 1s;
+        font-family: 'Futura';
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        margin-left: 5%;
+        margin-right: 5%;
+        width: 10%;
+        border-radius: 50%;
+        border: 4px solid white;
+        float: left; }
+        #icon-bar #icon-bar_borders #icon-bar_title-wrapper .icon-bar_title-item .icon-bar_title {
+          white-space: nowrap;
+          font-family: 'Futura';
+          top: 70px;
+          left: 50%;
+          transform: translatex(-50%);
+          -webkit-transform: translatex(-50%);
+          position: relative;
+          display: inline-block;
+          font-size: 15px;
+          text-align: center; }
+
+
